--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "AUTO DE TEMPORADA",
         "Main campaigns": "Campañas principales",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "¡Conoce la actualización de CSR2 5.9.0! \n\nNovedades: \n- Mejoras en la tienda web \n- Seguimiento de salida y cambio perfecto para logros \n- Corrección de errores y optimización \n\nRevisa Linker para descargar. ¡Felices carreras!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "¡Conoce la actualización del hub 1.1.4! \nNovedades: \n- Nueva función de MENSAJES \n- Visualización de colecciones sin premio \n- Música del evento de los 80 añadida \n- Corrección de errores y optimización \n\n¡Felices carreras!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "¡Conoce la actualización del hub 1.1.5! \nNovedades: \n- DONAR: activado y se añadieron las principales donaciones\n- AUTOSHOW: añadida exportación rápida snap-full\n- gitbox-mini: actualizado el efecto visual especial para importaciones gacha\n- añadido enlace hiperespecial a nuestro correo electrónico\n- corrección de errores y optimización \n\n¡Felices carreras!",
         "Music clip": "Musica",
         "Music volume": "Volumen",
         "NEW": "NUEVO",
