--- a/Localisation/FR.json
+++ b/Localisation/FR.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "VOITURE PHARE DE LA SAISON",
         "Main campaigns": "Campagnes principales",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Découvrez la mise à jour CSR2 5.9.0 ! \n\nNouveautés : \n- Améliorations du magasin en ligne \n- Suivi des départs et changements de vitesses parfaits pour les succès \n- Corrections de bugs et optimisation \n\nVérifiez Linker pour télécharger. Bonne course !",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Découvrez la mise à jour du hub 1.1.4 ! \nNouveautés : \n- Nouvelle fonction MESSAGES \n- Affichage des collections sans récompense \n- Musique de l'événement 80s ajoutée \n- Corrections de bugs et optimisation \n\nBonne course !",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Découvrez la mise à jour du hub 1.1.5 ! \nNouveautés : \n- DON : activé et ajout des meilleurs dons\n- AUTOSHOW : ajout de l'exportation rapide snap-full\n- gitbox-mini : mise à jour des effets visuels spéciaux pour les imports gacha\n- ajout d'un hyperlien spécial vers notre email\n- correction des erreurs et optimisation \n\nBonnes courses !",
         "Music clip": "Clip musical",
         "Music volume": "Volume de la musique",
         "NEW": "NOUVEAU",
