--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "マイルストーンシーズンカー",
         "Main campaigns": "メインキャンペーン",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2アップデート5.9.0をご紹介！ \n\n新機能: \n- ウェブストアの改善 \n- 実績のためのパーフェクトシフトとローンチトラッキングの追加 \n- 不具合修正と最適化 \n\nダウンロードはLinkerで確認してください。楽しいレーシングを！",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "ハブアップデート1.1.4をご紹介！ \n新機能: \n- 新メッセージ機能 \n- 報酬なしコレクションの表示追加 \n- 80年代イベントの音楽追加 \n- 不具合修正と最適化 \n\n楽しいレーシングを！",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "ハブアップデート1.1.5が登場！\n新機能：\n- 寄付：有効化され、寄付額トップが追加されました\n- オートショー：高速スナップフルエクスポートを追加\n- gitbox-mini：ガチャインポート用のビジュアルスペシャルを更新\n- メールへの特別ハイパーリンクを追加\n- エラーの修正と最適化\n\n Happy racing!",
         "Music clip": "音楽クリップ",
         "Music volume": "音楽音量",
         "NEW": "新着",
