--- a/Localisation/KO.json
+++ b/Localisation/KO.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "마일스톤 시즌 자동차",
         "Main campaigns": "주요 캠페인",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "CSR2 업데이트 5.9.0를 만나보세요! \n\n새로운 기능: \n- 웹스토어 개선 \n- 도전 과제를 위한 퍼펙트 시프트 및 lunch 트래킹 추가 \n- 오류 수정 및 최적화 \n\n다운로드를 위해 Linker를 확인하세요. 행복한 레이싱 되세요!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "허브 업데이트 1.1.4를 만나보세요! \n새로운 기능: \n- 새 메시지 기능 \n- 보상 없는 컬렉션 표시 추가 \n- 80년대 이벤트 음악 추가 \n- 오류 수정 및 최적화 \n\n행복한 레이싱 되세요!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "허브 업데이트 1.1.5를 만나보세요!\n새로운 기능:\n- 기부: 사용 가능 및 최고 기부금 추가\n- 오토쇼: 빠른 스냅-풀 내보내기 추가\n- gitbox-mini: 가챠 임포트용 시각적 스페셜 효과 업데이트\n- 이메일로의 특수 하이퍼링크 추가\n- 오류 수정 및 최적화\n\nHappy racing!",
         "Music clip": "음악 클립",
         "Music volume": "음악 볼륨",
         "NEW": "새로운 자동차",
