--- a/Localisation/PL.json
+++ b/Localisation/PL.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "SAMOCHÓD SEZONU MILESTONE",
         "Main campaigns": "Kampanie główne",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Oto aktualizacja CSR2 5.9.0! \n\nNowości: \n- Ulepszenia sklepu internetowego \n- Dodano śledzenie idealnego startu i zmiany biegów dla osiągnięć \n- Naprawa błędów i optymalizacja \n\nSprawdź Linker, aby pobrać. Wesołych wyścigów!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Oto aktualizacja centrum 1.1.4! \nNowości: \n- Nowa funkcja WIADOMOŚCI \n- Wyświetlanie kolekcji bez nagrody \n- Dodano muzykę z wydarzenia lat 80. \n- Naprawa błędów i optymalizacja \n\nWesołych wyścigów!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Poznaj aktualizację centrum 1.1.5! \nNowości: \n- DOTACJE: włączone i dodane najwyższe darowizny\n- AUTOSHOW: dodano szybki eksport snap-full\n- gitbox-mini: zaktualizowano efekty wizualne dla importów gacha\n- dodano specjalny hiperlink do naszego emaila\n- naprawiono błędy i optymalizacja \n\nHappy racing!",
         "Music clip": "Klip muzyczny",
         "Music volume": "Głośność muzyki",
         "NEW": "NOWOŚĆ",
