--- a/Localisation/PT-BR.json
+++ b/Localisation/PT-BR.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "CARRO MARCANTE DA TEMPORADA",
         "Main campaigns": "Campanhas principais",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Conheça a atualização do CSR2 5.9.0! \n\nNovidades: \n- Melhorias na loja virtual \n- Rastreamento de arrancada e câmbio perfeitos para conquistas \n- Correções e otimização \n\nVerifique o Linker para download. Boas corridas!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Conheça a atualização do hub 1.1.4! \nNovidades: \n- Novo recurso MENSAGENS \n- Exibição de coleções sem prêmio \n- Música do evento anos 80 adicionada \n- Correções e otimização \n\nBoas corridas!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Conheça a atualização do hub 1.1.5! \nNovidades: \n- DOAÇÕES: ativadas e principais doadores adicionados\n- AUTOSHOW: adicionada exportação rápida snap-full\n- gitbox-mini: efeito visual especial atualizado para importações de gacha\n- adicionado hyperlink especial para o nosso email\n- correção de erros e otimização \n\nFelizes corridas!",
         "Music clip": "Clipe de música",
         "Music volume": "Volume da música",
         "NEW": "NOVO",
