--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "СЕЗОННАЯ МАШИНА",
         "Main campaigns": "Основные кампании",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Встречайте обновление CSR2 5.9.0! \n\nЧто нового: \n- Улучшения веб-магазина \n- Добавлено отслеживание идеального старта и переключения передач для достижений \n- Исправление ошибок и оптимизация \n\nПроверьте Linker для загрузки. Удачных гонок!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Встречайте обновление хаба 1.1.4! \nЧто нового: \n- Новая функция СООБЩЕНИЯ \n- Отображение коллекций без приза \n- Добавлена музыка с события 80-х \n- Исправление ошибок и оптимизация \n\nУдачных гонок!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Встречайте обновление хаба 1.1.5! \nЧто нового: \n- ДОНАТЫ: добавлены топ-донаты\n- АВТОШОУ: добавлен быстрый экспорт snap-full\n- gitbox-mini: обновлены визуальные эффекты для импортных деталей\n- добавлена гиперссылка на нашу почту\n- исправление ошибок и оптимизация \n\nУдачных гонок!",
         "Music clip": "Музыка",
         "Music volume": "Громкость музыки",
         "NEW": "НОВОЕ",
