--- a/Localisation/AR.json
+++ b/Localisation/AR.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "سيارة الموسم البارزة",
         "Main campaigns": "الحملات الرئيسية",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "تعرف على تحديث CSR2 الإصدار 5.9.0! \n\nما الجديد: \n- تحسينات متجر الويب \n- إضافة تتبع الانطلاق والتغيير المثالي للإنجازات \n- إصلاح الأخطاء والتحسين \n\nتحقق من Linker للتنزيل. قيادة سعيدة!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "تعرف على تحديث المحور 1.1.4! \nما الجديد: \n- ميزة الرسائل الجديدة \n- إضافة عرض المجموعات بدون جائزة \n- إضافة موسيقى من حدث الثمانينيات \n- إصلاح الأخطاء والتحسين \n\nقيادة سعيدة!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "تحديث المركز 1.1.5! \nما الجديد: \n- التبرعات: مفعلة وتم إضافة أكبر المتبرعين\n- العرض التلقائي: تمت إضافة تصدير سريع لملف snap-full\n- gitbox-mini: تم تحديث المؤثرات البصرية لواردات gacha\n- تمت إضافة رابط تشعبي خاص لبريدنا الإلكتروني\n- إصلاح الأخطاء وتحسين الأداء \n\nسباق سعيد!",
         "Music clip": "مقطع موسيقي",
         "Music volume": "مستوى الموسيقى",
         "NEW": "جديد",
