--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "MEILENSTEIN SEASON AUTO",
         "Main campaigns": "Hauptkampagnen",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Stellt euch das CSR2-Update 5.9.0 vor! \n\nNeuerungen: \n- Verbesserungen am Webstore \n- Perfekte Schalt- und Startverfolgung für Erfolge hinzugefügt \n- Fehlerbehebungen & Optimierungen \n\nÜberprüfe Linker zum Download. Viel Spaß beim Rennen!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Stellt euch das Hub-Update 1.1.4 vor! \nNeuerungen: \n- Neue NACHRICHTEN-Funktion \n- Anzeige von Kollektionen ohne Preis \n- Musik vom 80er-Event hinzugefügt \n- Fehlerbehebungen & Optimierungen \n\nViel Spaß beim Rennen!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Trefft das Hub-Update 1.1.5! \nWas ist neu: \n- SPENDEN: aktiviert und Top-Spenden hinzugefügt\n- AUTOSHOW: Schneller Snap-Full-Export hinzugefügt\n- gitbox-mini: Aktualisierte visuelle Spezialeffekte für Gacha-Importe\n- Spezieller Hyperlink zu unserer E-Mail hinzugefügt\n- Fehler behoben und Optimierung \n\nViel Spaß beim Rennen!",
         "Music clip": "Musik",
         "Music volume": "Musik-Lautstärke",
         "NEW": "NEU",
