--- a/Localisation/IT.json
+++ b/Localisation/IT.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "AUTO STORICA DELLA STAGIONE",
         "Main campaigns": "Campagne principali",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "Scopri l'aggiornamento di CSR2 5.9.0! \n\nNovità: \n- Miglioramenti al negozio online \n- Tracciamento partenza e cambio perfetti per i successi \n- Bug fix e ottimizzazioni \n\nControlla Linker per il download. Buone corse!",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "Scopri l'aggiornamento dell'hub 1.1.4! \nNovità: \n- Nuova funzione MESSAGGI \n- Visualizzazione collezioni senza premio \n- Musica dell'evento anni 80 aggiunta \n- Bug fix e ottimizzazioni \n\nBuone corse!",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "Ecco l'aggiornamento dell'hub 1.1.5! \nNovità: \n- DONAZIONI: abilitate e aggiunte le donazioni principali\n- AUTOSHOW: aggiunta l'esportazione rapida snap-full\n- gitbox-mini: aggiornato l'effetto visivo speciale per le importazioni gacha\n- aggiunto hyperlink speciale alla nostra email\n- correzione di errori e ottimizzazione \n\nBuone corse!",
         "Music clip": "Brano musicale",
         "Music volume": "Volume musica",
         "NEW": "NUOVO",
