--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "賽季里程碑車輛",
         "Main campaigns": "主要眾籌活動",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新內容： \n- 網頁商店改進 \n- 新增完美換擋和起步成就追蹤 \n- 錯誤修正和優化 \n\n請查看Linker以下載。祝您競速愉快！",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "迎接中心更新1.1.4！ \n新內容： \n- 新訊息功能 \n- 新增無獎勵收藏品顯示 \n- 添加80年代活動音樂 \n- 錯誤修正和優化 \n\n祝您競速愉快！",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "遇見中心更新1.1.5！\n新功能：\n- 捐贈：已啟用並添加了頂級捐贈\n- 自動展示：添加了快速snap-full導出\n- gitbox-mini：更新了用於gacha導入的視覺特效\n- 添加了指向我們郵箱的特殊超鏈接\n- 錯誤修復和優化\n\n競速快樂！",
         "Music clip": "音樂曲子",
         "Music volume": "音樂聲量",
         "NEW": "新",
