--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -100,7 +100,7 @@
         "MILESTONE SEASON CAR": "赛季里程碑车辆",
         "Main campaigns": "主要众筹活动",
         "Meet the CSR2 update 5.9.0! \n\nWhat's new: \n- webstore improvements \n- added perfect shift and launch tracking for achievements \n-fix errors and optimization \n\nCheck Linker for download. Happy racing!": "迎接CSR2更新5.9.0！ \n\n新内容： \n- 网页商店改进 \n- 新增完美换挡和起步成就追踪 \n- 错误修复和优化 \n\n请查看Linker以下载。祝您竞速愉快！",
-        "Meet the hub update 1.1.4! \nWhat's new: \n-new INBOX feature \n-added display of collections without prize \n-added music from the 80s event \n-fix errors and optimization \n\nHappy racing!": "迎接中心更新1.1.4！ \n新内容： \n- 新消息功能 \n- 新增无奖励藏品显示 \n- 添加80年代活动音乐 \n- 错误修复和优化 \n\n祝您竞速愉快！",
+        "Meet the hub update 1.1.5! \nWhat's new: \n- DONATE: enabled and top-donates added\n- AUTOSHOW: added fast snap-full export\n- gitbox-mini: updated visual special for gacha imports\n- added special hyperlink to our email\n- fix errors and optimization \n\nHappy racing!": "遇见中心更新1.1.5！\n新功能：\n- 捐赠：已启用并添加了顶级捐赠\n- 自动展示：添加了快速snap-full导出\n- gitbox-mini：更新了用于gacha导入的视觉特效\n- 添加了指向我们邮箱的特殊超链接\n- 错误修复和优化\n\n竞速快乐！",
         "Music clip": "音乐曲子",
         "Music volume": "音乐声量",
         "NEW": "新",
